--- a/mysite/static/mysite/css/theme.css
+++ b/mysite/static/mysite/css/theme.css
@@ -20,14 +20,14 @@ h2.product-rec {
 	font-weight: 300;
 	text-transform: uppercase;
 	position: relative;
-	margin: 30px 0 80px;
+	margin: 30px 0 50px;
 }
 h2.product-rec b {
 	color: #00C1DA;
 }
 .carousel {
-	margin: 50px auto;
-	padding: 0 70px;
+	margin: 30px auto;
+	padding: 0 20px;
 }
 .carousel .item {
 	min-height: 330px;
@@ -156,4 +156,6 @@ h2.product-rec b {
 .carousel-indicators li.active {
 	background: rgba(0, 0, 0, 0.6);
 }
-
+.divider hr {
+    border-top: 1px solid rgba(89, 89, 89, 0.24);
+}
